--- a/Desenvolvimento Web/Webnamorada/Ativ5/questão2.html
+++ b/Desenvolvimento Web/Webnamorada/Ativ5/questão2.html
@@ -4,6 +4,8 @@
 	</head>
 		<title> Minha casa</title>
 		<meta charset = "utf-8">
+		<!Aluno : Breno Pejon Rodrigues
+		 N°USP: 10801152>
 
 	<body>
 		<h1> Minha casa na Bahia</h1>
@@ -13,7 +15,8 @@
 		<ul>
 			<li>1 Banheiro</li>
 			<li>2 Quartos</li>
-			<li> Uma cozinha que também é sala e lavanderia</li>
+			<li>Uma cozinha que também é sala e lavanderia</li>
+			<li>Quintal modesto</li>
 		</ul>
 
 		<h3> Disciplinas que já cursei na USP</h3>
